# strobes-agents-cli

./: .gitignore  Cargo.toml  README.md  action.yml  install.sh  pyproject.toml
.gitea/workflows/: build-linux.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security-assessment.yml
docs/: index.html
src/: api.rs  app.rs  browser.rs  config.rs  local.rs  main.rs  markdown.rs  picker.rs  pulse.rs  remote_wf_tui.rs  workflow.rs  workflow_runner.rs  workflow_state.rs  workflow_tui.rs
src/strobes_ai/: __init__.py  api.py  cli.py  config.py  render.py  repl.py
src/strobes_ai/bridges/: __init__.py  browser_bridge.py  pty_session.py  shell_bridge.py  supervisor.py
src/strobes_ai/local/: __init__.py  browser.py  dispatch.py  shell.py
src/strobes_ai/ws/: __init__.py  pulse.py
tests/: test_local_and_protocol.py
tui/: Cargo.toml  README.md
tui/src/: api.rs  config.rs  main.rs  pulse.rs
workflows/: api-security-hunting.yaml  app-feature-discovery.yaml  bugbounty-enhanced-recon.yaml  bugbounty-recon.yaml  crawl-application.yaml  feature-crawl.yaml  full-bugbounty-hunt.yaml  webapp-pentest.yaml
