[package]
name = "strobes-tui"
version = "0.1.0"
edition = "2021"
description = "Strobes Agents AI — Ratatui terminal client for remote Strobes workspaces"
license = "Proprietary"

[[bin]]
name = "strobes-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
url = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = { version = "0.12", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
base64 = "0.22"

[profile.release]
opt-level = 2
